--- a/src/Dashboard_components/Transaction.css
+++ b/src/Dashboard_components/Transaction.css
@@ -1,4 +1,4 @@
-.container-transaction {
+.container-transactions {
     background-color: #f7f7f7;
     border: 1px solid #ccc;
     padding: 20px;
